human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_112.wast
(assert_invalid
  (module (func (unreachable) (select (i64.const 1) (i32.const 1) (i32.const 1)) (drop)))
  "type mismatch"
)